package iuh.abstractfactory;


public interface Button {

    void paint();

}
