package iuh.abstractfactory;

public interface Checkbox {

    void check();

}
