package iuh.abstractfactory;


public interface GUIFactory {

    Button createButton();

    Checkbox createCheckbox();

}
