package iuh.abstractfactory;

public class MacCheckbox implements Checkbox {

    @Override
    public void check() {
        System.out.println("Render Mac Checkbox");
    }

}
