package iuh.abstractfactory;

public class WinCheckbox implements Checkbox {

    @Override
    public void check() {
        System.out.println("Render Windows Checkbox");
    }

}
